--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.1.7",
     "autoprefixer": "^10.4.20",
     "next": "15.0.3",
+    "openai": "^4.77.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
