--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quiz-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,6 +17,7 @@
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.7",
     "next": "15.0.3",
     "openai": "^4.77.3",
     "react": "^18.3.1",
